#67 - Bug Fix Favicon